--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,25 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* Solution */
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left-side, .right-side{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+ul{
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
