--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,30 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.title{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.barberry, .chili, .pepper, .saffron{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.items{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 52px;;
+}
+
+.text{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  width: 200px;
+}
