--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,47 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* solution */
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color: #666;
+}
+
+button{
+  padding: 8px 16px;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between; 
+  padding: 16px;
+}
+
+.left-links, .right-links{
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+}
+
+.content{
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.footer{
+  background: #eeeeee;
+}
